# i2i

./: PUBLISHING.md  README.md  RFC-MCIP.md  config.json  config.schema.json  demo.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
benchmarks/: README.md  full_evaluation.py  full_evaluation_v2.py  harness.py  run_benchmarks.py  self_consistency_comparison.py  threshold_ablation.py
benchmarks/datasets/: controlled_hallucination.json  gsm8k.json  hallucination_test.json  prepare_datasets.py  strategy_qa.json  trivia_qa.json
benchmarks/results/: ControlledHallucination_v2_20260131_014352.json  GSM8K_v2_20260131_020056.json  StrategyQA_v2_20260131_021913.json  TriviaQA_v2_20260131_023159.json  TruthfulQA_v2_20260131_012340.json  controlled_hallucination_openrouter_20260130_234043.json  evaluation_progress.json  evaluation_progress_extended.json  extended_evaluation_20260131_064454.json  full_evaluation_v2_20260131_010125.json  gsm8k_openrouter_20260130_202230.json  gsm8k_openrouter_20260130_211456.json  gsm8k_openrouter_20260130_212642.json  (+10 more)
docs/: langchain-integration-research.md
examples/: basic_usage.py  langchain_rag_verification.ipynb  statistical_analysis.py  task_aware_consensus.py
i2i/: __init__.py  cli.py  config.py  consensus.py  embeddings.py  protocol.py  providers.py  router.py  schema.py  statistics.py  verification.py
logs/: .32d8ba7759cb0a1056ddd68fb1cf550d1adf85e5-audit.json  .3ac342c17e169fb61e773a3ce107fcfd7b72abde-audit.json  .63d00b7e8a9970067052620058c1236c6688446d-audit.json  .658aaf5385ca513ebb1e8c115c4937e64134110b-audit.json  .77ef029f38728e8436777da8467e516c7a3de39e-audit.json  .9cdfd5c6133c5241c775a70215830580c60dbdf3-audit.json  .b3cbbaf6ca5b3310e419cd80cb33971eb0d22868-audit.json  .cffcb3584c99dea16a4e312300f3f8d49fca02a2-audit.json  .db5bba3b4e326936478830738f679681762d02e9-audit.json  .e52cb63b4fb774e2b5e8e0492be4ecae6738ffd6-audit.json
paper/: REVIEW-NOTES.md  i2i-mcip.aux  i2i-mcip.out  i2i-mcip.tex
(+13 files in other folders)
