[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i2i"
version = "0.1.0"
description = "AI-to-AI Communication Protocol - Multi-model consensus, verification, and intelligent routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lance James", email = "lance@unit221b.com"}
]
keywords = ["ai", "llm", "consensus", "multi-model", "ai-to-ai", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "mistralai>=0.1.0",
    "groq>=0.4.0",
    "cohere>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
i2i = "i2i.cli:main"

[project.urls]
Homepage = "https://github.com/lancejames221b/i2i"
Documentation = "https://github.com/lancejames221b/i2i#readme"
Repository = "https://github.com/lancejames221b/i2i"
Issues = "https://github.com/lancejames221b/i2i/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["i2i*"]

[tool.setuptools.package-data]
i2i = ["*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
